(feed) Fix overflow of image titles

--- a/src/app/features/home/components/feed-item/feed-item.component.scss
+++ b/src/app/features/home/components/feed-item/feed-item.component.scss
@@ -52,6 +52,7 @@
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
+        overflow: hidden;
       }
 
       .feed-item-header-text-2 {
